@@ -26,6 +26,9 @@ octsympy 2.5.1-dev
     using `sym(0.1, 'f')`.  Passing `'r'` gives the current heuristic
     behaviour.  Neither raises a warning.
 
+  * `subs` is not approriate for numerical evaluation; add an example in
+    `help subs` which shows how to do this with `function_handle`.
+
   * Bug fix: isequal(n) for symfun's correctly tests the argnames.
 
 
